BNF.txt
# Query

## Logical Nodes

* Scan
* Filter
* Project
* Sort
* Limit
* Aggregate
* Join
* Insert
* Update
* Delete
* CreateTable
* DropTable
* CreateDatabase
* DropDatabase
* Values

## Physical Nodes

* CsvScan
* CsvRewrite
* CsvInsert
* CsvCreate
* CsvDrop
* DirCreate
* DirDrop

## SHOW

> SHOW TABLES;

	DirList
	- CsvFileGrep

> SHOW DATABASES;

	DirList

## USE

> USE mydb;

	UseDB

## CREATE

> CREATE DATABASE mydb;

	DirCreate (create mydb directory)

> CREATE TABLE mytab (
> 	id: PRIMARY KEY AUTOINCREMENT,
>   name: CHAR[128] NOT NULL,
> );

	CsvCreate (create mytab CSV file)

## DROP

> DROP DATABASE mydb;

	DirDeleteAll (delete mydb directory)

> DROP TABLE mytab;

	CsvFileDelete (delete mytab CSV file)

## GET

> GET name OF mytab WHERE id == 123;

	Get one record.

	Project (select columns)
	- Filter (WHERE id == 123)
	- CsvScan (read mytab)

> GET ALL id OF mytab WHERE id == 123;

	Get all records.

	Project (select columns)
	- Filter (WHERE id == 123)
	- CsvScan (read mytab)

> GET ALL COUNT(*) OF mytab WHERE id == 123;

	Aggregate (COUNT(*))
	- Filter (WHERE id == 123)
	- CsvScan (read mytab)

## ADD

> ADD id = 1, name = "taro" OF mytab;

	CsvFileAppend (insert row to CSV file)
	- Values (id = 1, name = "taro")

## SET

> SET name = "taro" OF mytab;
> SET name = "taro" OF mytab WHERE id > 123;
> SET ALL name = "taro" OF mytab WHERE id > 123;
> SET ALL name = "taro" OF mytab;

	CsvFileRewrite (create new CSV file. and delete old CSV file)
	 - RowUpdate
	  - Project
	   - Filter (WHERE id > 123)
	   - CsvScan (mytab)

## DEL

> DEL OF mytab WHERE id > 100;
> DEL ALL OF mytab;
> DEL OF mytab;

	CsvFileRewrite (open CSV file. and save CSV file)
	 - RowDelete
	  - Project 
	   - Filter (WHERE id > 100)
       - CsvScan (read mytab)

## BNF

query ::= { stmt ';' }*
stmt ::= (drop_stmt | show_stmt | use_stmt | create_stmt | get_stmt | set_stmt | add_stmt | del_stmt)
drop_stmt ::= ( 'DROP' 'TABLE' ident ) | ( 'DROP' 'DATABASE' ident )
show_stmt ::= ( 'SHOW' 'TABLES' ) | ( 'SHOW' 'DATABASES' )
use_stmt ::= 'USE' db_name:ident
create_stmt ::= create_database | create_table
create_table ::= 'CREATE' 'TABLE' ident '(' column_definition { ',' column_definition }* ')'
create_database ::= 'CREATE' 'DATABASE' ident
column_definition ::= ident ':' { column_type }+
column_type ::= 'PRIMARY_KEY' | 
			 'AUTO_INCREMENT' |
             'I64' |
             'F64' |
             'CHAR' '[' i64_value ']'
get_stmt ::= 'GET' 'ALL'? (expr_list) 'OF' table:ident where?
set_stmt ::= 'SET' 'ALL'? (expr_list) 'OF' table:ident where?
add_stmt ::= 'ADD' (expr_list) 'OF' table:ident
del_stmt ::= 'DEL' 'ALL'? 'OF' table:ident where?
where ::= 'WHERE' expr
expr_list ::= expr { ',' expr }*
ident ::= [a-zA-Z_]+
expr ::= ass_expr
ass_expr ::= or_expr ( '=' or_expr )?
or_expr ::= and_expr { 'OR' and_expr }*
and_expr ::= compare_expr { 'AND' compare_expr }*
compare_expr ::= operand { compare_op operand }*
compare_op ::= ('==' | '!=')
operand ::= (i64_value | f64_value | string | ident | '*') | '(' expr ')'
i64_value ::= [0-9]+
f64_value ::= [0-9]* '.' [0-9]+
string ::= '"' .* '"'
ident ::= [a-zA-Z_] [a-zA-Z0-9_]*
